
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-June-22 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+all:
    Default path kicad/share added when searching kicad data (like library, internat ...)
    Kicad data Default paths are now (windows version and linux server install)
    1 - kicad/share
    2 - kicad


2008-June-15 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema:
    Bug solved: Eeschema crashed when creating a new subsheet with the same
    filename as an existing filename, if loading this existing file.


2008-June-11 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+all:
    Online doc format changed to PDF format.
    This is **very** easier to handle, because :
    - Openoffice has a very good pdf export function.
    - Only one file for application
    - Is standart (The old html format used a zipped archive, not standart)
    - the doc tree is less complex (see doc/help/fr or doc/help/en for the new tree).

    If a localized doc file is not found, the english version is automatically loaded instead.
    No need to copy the same pdf file in subdirectory.


2008-June-06 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+all:
    minor changes
    added void SetLocaleTo_C_standard(void) and void SetLocaleTo_Default(void)
    This is wrapper to the C setlocale( LC_NUMERIC, "C" )
    and setlocale( LC_NUMERIC, "" )function,
    but could make more easier an optional use of locale in kicad in floating point notations


2008-May-30 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>