@@ -5,6 +5,12 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Jule-08 UPDATE   Andrey Fedorushkov <andrf@mail.ru>
+================================================================================
++pcbnew:
+    Added displayed length highlighted net to pcbnew/affiche.cpp
+
+
 2008-June-22 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 +all:
